--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -4,6 +4,7 @@ block vars
 html(lang='en')
   head
     block head
+      base(href='/naturenet-blog/')
       meta(charset='utf-8')
       meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
       meta(name='viewport', content='width=device-width')
@@ -12,7 +13,7 @@ html(lang='en')
           = locals.name
       link(rel='alternate', href=locals.url+'/feed.xml', type='application/rss+xml', title=locals.description)
       link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300')
-      link(rel='stylesheet', href='/css/main.css')
+      link(rel='stylesheet', href='css/main.css')
   body(class=bodyclass)
     header.header
       div.content-wrap
